feat(jvm/JEP-277): remove deprecated and marked for removal code